--- a/src/App.css
+++ b/src/App.css
@@ -11,41 +11,7 @@
 }
 
 /* Header */
-.header-container {
-    display: grid;
-    grid-template-columns: 1f repeat(3,auto) 1fr;
-    justify-items: center;
-    align-items: center;
 
-}
-
-.header2-container {
-    display: grid;
-    grid-template-columns: 1f repeat(3,auto) 1fr;
-    justify-items: center;
-    align-items: center;
-}
-
-.back-btn {
-    grid-column-start: 1;
-    justify-self: flex-start;
-    margin-left: 16px;
-}
-
-.avatar-container {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    grid-column-start: 3;
-    justify-self: flex-end;
-    margin: 8px 16px;
-
-}
-
-.logo {
-   grid-column-start: 2;
-   justify-self: center;
-}
 
 /* Bookshelf header */
 
@@ -70,7 +36,7 @@ h1 {
 }
 
 
-.add-btn {
+.add-btn, .login-btn {
     font-size: 18px;
     font-weight: 700;
     text-decoration: none;
@@ -197,7 +163,7 @@ p {
     margin-bottom: 40px;
 }
 
-input {
+.search-input {
     height: 48px;
     border: 1px solid #F0E4DB;
     border-radius: 12px;  
@@ -517,13 +483,13 @@ input {
 
     .header-container {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1f repeat(3,auto) 1fr;
         justify-items: center;
         align-items: center;
     
     }
     
-    .header2-container {
+    .header-search-container {
         display: grid;
         grid-template-columns: 1f repeat(3,auto) 1fr;
         justify-items: center;
