--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,6 @@
 .header-container {
     display: grid;
-    grid-template-columns: 1f repeat(3,auto) 1fr;
+    grid-template-columns: repeat(3,1fr);
     justify-items: center;
     align-items: center;
     padding: 12px 0px;
@@ -8,7 +8,7 @@
 
 .header-search-container {
     display: grid;
-    grid-template-columns: 1f 1fr 1fr;
+    grid-template-columns: repeat(3,1fr);
     justify-items: center;
     align-items: center;
     padding: 12px 0px;
@@ -25,12 +25,24 @@
     color: black;
 }
 
+.header-entry {
+    background-color: aqua;
+    display: flex;
+
+}
+
 .header-login {
     font-size: 18px;
     font-weight: 700;
     text-decoration: none;
     color: black;
     border: none;
+    padding-left: 24px;
+}
+
+.header-login:hover,
+.header-login:focus {
+    cursor: pointer;
 }
 
 .logo {
@@ -44,7 +56,9 @@
     margin-left: 40px;
 }
 
-.modal {
+/*Entry modal open and close*/
+
+.entry-modal {
     position: fixed; 
     z-index: 1;
     left: 0;
@@ -56,45 +70,57 @@
     display: flex;
     justify-content: center;
     align-items: center;    
-  
   }
 
-.modal-content {
+.entry-modal-content {
     border-radius: 12px;
     height: 492px;
     width: 480px;
 }
 
-.modal-login, .modal-signup {
+.entry-modal-close {
+    font-size: 32px;
+    display: flex;
+    justify-content: flex-end;
+    padding: 8px 24px 0 0;
+    border-radius: 12px 12px 0 0;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.entry-modal-close:hover,
+.entry-modal-close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/*Entry (log in, sign up) form*/
+
+.entry-form-info {
+    margin: 16px 0 40px 0;
+}
+
+.entry-form-elements {
     margin: 0 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.modal-form {
+.entry-form {
     width: 100%;
 }
 
-.log-in-info {
-    margin: 16px 0 40px 0;
+.entry-form-label {
+    margin-bottom: 8px;
 }
 
-.login-btn {
-    width: 100%;
-    margin-bottom: 24px;
-}
-
-.modal-form-input {
+.entry-form-input {
     display: flex;
     flex-direction: column;
 }
 
-label {
-    margin-bottom: 8px;
-}
-
-.form-input {
+.entry-form-credentials {
     height: 48px;
     border: 1px solid #F0E4DB;
     border-radius: 12px;  
@@ -104,29 +130,31 @@ label {
     margin-bottom: 24px;
 }
 
-.modal-close {
-    font-size: 32px;
-    display: flex;
-    justify-content: flex-end;
-    padding: 8px 24px 0 0;
-    border-radius: 12px 12px 0 0;
-    color: rgba(0, 0, 0, 0.6);
-}
-
-.modal-close:hover,
-.modal-close:focus {
-    color: black;
+.entry-form-credentials:focus {
+    outline: none;
     text-decoration: none;
-    cursor: pointer;
 }
 
-.modal-signup-switch {
+
+.entry-form-submit {
+    width: 100%;
+    margin-bottom: 24px;
+}
+
+.entry-form-submit:hover {
+    cursor: pointer;
+    background-color: black;
+    color: white;
+}
+
+
+.entry-switch {
     color: black;
     text-decoration: underline 1px;
 }
 
-.modal-signup-switch:hover,
-.modal-signup-switch:focus {
+.entry-switch:hover,
+.entry-switch:focus {
     cursor: pointer;
 
 }
