--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -20,15 +20,17 @@
     justify-self: right;
     margin-right: 40px;
     font-size: 18px;
-    font-weight: 700;
     text-decoration: none;
     color: black;
 }
 
-.header-entry {
-    background-color: aqua;
-    display: flex;
+.logged {
+    color: black;
+}
 
+.header-entry {
+    display: flex;
+    justify-content: space-between;
 }
 
 .header-login {
@@ -37,7 +39,7 @@
     text-decoration: none;
     color: black;
     border: none;
-    padding-left: 24px;
+
 }
 
 .header-login:hover,
