ready to deploy

--- a/src/App.css
+++ b/src/App.css
@@ -8,5 +8,5 @@
 .main-container {
     max-width: 1040px;
     margin: 0 auto;
-    padding-inline: min(40px, 16vh)
+    padding-inline: min(40px, 16vh);
 }
